# llama

./: .gitignore  Cargo.toml  LICENSE  README.md  dune-project  llama.opam
.github/workflows/: rust.yml
examples/: fib.synth  fib.ucl  fib2safety.synth  kevin.ucl  kevin2.ucl  max.synth  max.ucl  modifies.ucl  qflia.smt2  qfuf.smt2  qfuflia.smt2  qfuflia_ite.smt2  qfuflia_ite_result.smt2  queue.ucl  returns.ucl  test-enum.ucl  uf.smt2  uf_result.smt2
lib/: bool.ml  bool.mli  dune  lia.ml  lia.mli  llcore.ml  llcore.mli
src/: README.md  ast.rs  checks.rs  cstcheck.rs  cstpass.rs  errors.rs  main.rs  parser.rs  semck.rs  smtlib.pest  smtlib.rs  sym.rs  symbols.rs  ty.rs  types.rs  vm.rs  walk.rs
src/api/: mod.rs
src/ast/: boolean.rs  formulas.rs  input.rs  integer.rs  mod.rs  output.rs  symbols.rs  terms.rs  types.rs
src/checks/: enums.rs
src/context/: form.rs  input.rs  logic.rs  mod.rs  output.rs  sort.rs
src/cstcheck/: defcheck.rs  enumcheck.rs
src/cstpass/: declpass.rs  enumcheck.rs
src/ctx/: mod.rs  sort.rs
src/error/: diag.rs  msg.rs
src/errors/: diag.rs  diagnostic.rs  message.rs  msg.rs
src/eval/: arith.rs  boolean.rs  integer.rs  mod.rs
src/evl/: boolean.rs  integer.rs  mod.rs
src/parser/: ast.rs  builder.rs  cst.rs  error.rs  lexer.rs  parser.rs
src/pest/: synth.pest
src/pst/: synth.pest
src/qry/: api.rs  form.rs  input.rs  mod.rs  output.rs
src/query/: form.rs  input.rs  mod.rs  output.rs
src/rwr/: mod.rs
src/semck/: specialize.rs  typeparamck.rs
src/smt/: cvc4.rs  mod.rs  z3.rs
src/syn/: mod.rs
src/term/: boolean.rs  (+2 more)
(+25 files in other folders)
