opam-version: "2.0"
version: "0.0"
maintainer: "fmora@berkeley.edu"
authors: ["Federico Mora"]
homepage: "https://github.com/FedericoAureliano/llama"
bug-reports: "https://github.com/FedericoAureliano/llama/issues"
dev-repo: "git+https://github.com/FedericoAureliano/llama.git"
build: [
  ["dune" "build" "-p" name]
]